--- a/Exploratory data analysis.ipynb
+++ b/Exploratory data analysis.ipynb
@@ -5,7 +5,7 @@
    "id": "46e5d105",
    "metadata": {},
    "source": [
-    "## EDA (Exploratory Data Analysis)"
+    "## EDA (Exploratory Data Analysis) on train dataset"
    ]
   },
   {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "0b993ce9",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "03ef8c04",
    "metadata": {},
    "outputs": [
